--- a/vim_and_vigor/index.html
+++ b/vim_and_vigor/index.html
@@ -1,70 +1,65 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Vim and Vigor - Homepage</title>
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/styles.css"/>
-	<script type='text/javascript' src='http://code.jquery.com/jquery-1.7.1.js'></script>
-	<script src="js/navigation.js"></script>
+	<html>
+	<head>
+		<meta charset='UTF-8'>
+		<title>Vim and Vigor - Homepage</title>
+		<link href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css' rel='stylesheet'>
+		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Arvo|Cutive+Mono|Roboto' rel='stylesheet' type='text/css'>
+		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css'>
+		<link rel='stylesheet' type='text/css' href='css/styles.css'/>
+		<script type='text/javascript' src='http://code.jquery.com/jquery-1.7.1.js'></script>
+		<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js'></script>
+		<script src='js/navigation.js'></script>
+		<script src='js/smooth-scroll.js'></script>
 
-</head>
-<body>
-	<!-- <div id="banner"></div> -->
-	<div id="siteHolder">
-		<div id="header">
-			<img src="images/green-doll-v-letter.gif" height="40px" width="40px" /><h1>Vim and Vigor</h1>
-		</div>
-		<div id="nav">
-			<ul>
-				<li><a href="#"><h3><i class="fa fa-home"></i>Home</h3></a></li>
-				<li><h3><i class="fa fa-info-circle"></i>About</h3></a>
-					<ul>
-						<li><a href="#">About 1</a></li>
-						<li><a href="#">About 2</a></li>
-						<li><a href="#">About 3</a></li>
-					</ul>
-				</li>
-				<li><h3><i class="fa fa-graduation-cap"></i>Beginners</h3>
-					<ul>
-						<li><a href="#">About 1</a></li>
-						<li><a href="#">About 2</a></li>
-						<li><a href="#">About 3</a></li>
-					</ul>
-				</li>
-				<li><h3><i class="fa fa-graduation-cap"></i>Intermediate</h3>
-					<ul>
-						<li><a href="#">About 1</a></li>
-						<li><a href="#">About 2</a></li>
-						<li><a href="#">About 3</a></li>
-					</ul>
-				</li>
-				<li><h3><i class="fa fa-graduation-cap"></i>Advanced</h3>
-					<ul>
-						<li><a href="#">About 1</a></li>
-						<li><a href="#">About 2</a></li>
-						<li><a href="#">About 3</a></li>
-					</ul>
-				</li>
-				<li><h3><i class="fa fa-book"></i>Resources</h3>
-					<ul>
-						<li><a href="#">About 1</a></li>
-						<li><a href="#">About 2</a></li>
-						<li><a href="#">About 3</a></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-		<div id="content" class="home">
-			<div id="localNav">
-				<ul>
-					<li><a href="#">Page1</a></li>
-					<li><a href="#">Page2</a></li>
-					<li><a href="#">Page3</a></li>
-					<li><a href="#">Page4</a></li>
-					<li><a href="#">Page5</a></li>
-				</ul>
-			</div>
+	</head>
+	<body>
+		<!-- <div id='banner'></div> -->
+		<div id='siteHolder'>
+			<div id='header'>
+				<div id='leftHeader'>
+					<img id='logo' src='./images/logo2.png' alt='logo'/>
+				</div>
+				<div id='rightHeader'>
+					<div class='floatRight'>
+					<h5>Login:</h5>
+					<form>
+						<input type='textfield'/><br/>
+						<input type='textfield'/><br/>
+						<input type='submit'/><button>Register</button>
+					</form>
+					</div>
+				</div>
+				<div class='clearfix'></div>
+			</div><div id='nav' ><nav><ul><li><a href='index.php'><h3><i class='fa fa-home'></i>Home</h3></a>
+</li>
+<li><h3><i class='fa fa-info-circle'></i>About</h3>
+<ul>
+<li><a href='about.php#generalinfo'><i class='fa fa-circle-o'></i>General Information</a></li>
+<li><a href='about.php#history'><i class='fa fa-circle-o'></i>History</a></li>
+<li><a href='about.php#development'><i class='fa fa-circle-o'></i>Development Timeline</a></li>
+</ul>
+</li>
+<li><h3><i class='fa fa-graduation-cap'></i>Beginners</h3>
+<ul>
+<li><a href='installation.php'><i class='fa fa-circle-o'></i>Installation</a></li>
+<li><a href='navigation.php'><i class='fa fa-circle-o'></i>Navigating Vim</a></li>
+<li><a href='modes.php'><i class='fa fa-circle-o'></i>Vim's Modes</a></li>
+<li><a href='modes_cont.php'><i class='fa fa-circle-o'></i>Modes Continued</a></li>
+<li><a href='b_quiz.php'><i class='fa fa-circle-o'></i>Beginners Quiz</a></li>
+</ul>
+</li>
+<li><h3><i class='fa fa-graduation-cap'></i>Intermediate</h3>
+<ul>
+<li><a href='workflow.php'><i class='fa fa-circle-o'></i>Workflow</a></li>
+<li><a href='whitespace.php'><i class='fa fa-circle-o'></i>Whitespace</a></li>
+<li><a href='adv_nav.php'><i class='fa fa-circle-o'></i>Advanced Navigation</a></li>
+</ul>
+</li>
+</ul></nav></div>
+<div id="content" class="home">
+<div id='localNav' ><nav><ul></ul></nav></div>
 			<div id="breadcrumbs">Breadcrumbs - Breadcrumbs 2</div>
 			<div id="pageContent">
 				<h2>General Info</h2>
